# chess_algorithm

./: Cargo.toml  readme.md
benches/: figure_list_bench.rs  score_estimator_bench.rs
src/: board.rs  board_controller.rs  database.rs  figure.rs  figure_list.rs  lib.rs  list.rs  main.rs  move_generator.rs  movement.rs  point.rs  score.rs  score_estimator.rs
tests/: board_controller_test.rs  board_test.rs  database_test.rs  figure.rs  figure_list_test.rs  figure_test.rs  move_generator.rs  movement_test.rs  score_estrimator_test.rs  stress_test.rs
