[package]
name = "chess_algorithm"
version = "0.1.2"
authors = ["Stepan <stepannk@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
chrono = "0.4.19"
enum-display-derive = "0.1.0"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled", "chrono"]

[profile.release]
#debug = true